# Monkey-Typer

./: CMakeLists.txt  README.md  highscores.txt
src/: main.cpp
